# AEGIS

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  README.md  SECRETS.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  pyproject.toml  pyrightconfig.json  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_quizzes_and_questions.py  0002_create_exam_sessions.py  0003_create_exam_answers.py  0004_create_student_sessions.py  (+15 more)
backend/app/: config.py  database.py  dependencies.py  main.py  models.py
backend/auth/: auth.py  main.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_absent_students.py  test_admin.py  test_answer_time_scorer.py  test_answers.py  test_auth.py  test_auth_fixtures.py  test_auth_router.py  test_auto_close.py  test_baseline_calculator.py  test_consent.py  test_exam_auto_open.py  test_exam_past_start.py  test_exams.py  test_export.py  test_first_keypress_scorer.py  test_groups.py  test_health.py  test_iki_scorer.py  test_live_monitor.py  test_manual_grade.py  test_paste_scorer.py  test_question_bank.py  test_questions.py  test_quiz_cache.py  test_quizzes.py  test_rbac.py  test_resize_scorer.py  test_resources.py  test_score_persistence.py  test_scorer.py  test_scorer_worker.py  test_scoring_presets.py  test_sessions.py  test_signal_scorer.py  test_student.py  test_tab_blur_scorer.py  test_telemetry_schema.py  test_telemetry_service.py  test_telemetry_ws.py
backend/workers/: scorer_worker.py
(+153 files in other folders)
